--- a/assets/pages/aboutUs.html
+++ b/assets/pages/aboutUs.html
@@ -33,12 +33,12 @@
             <p></p>
         </section>
         <section class="sectionAbout">
-            <img src="" alt="">
+            <img src="../images/picture.jpg" alt="">
             <h3>o quizas prefieres en tren y deslumbrarte con las montañas y paisajes!</h3>
             <p></p>
         </section>
         <section class="sectionAbout">
-            <img src="" alt="">
+            <img src="../images/image.jpg" alt="">
             <h3>y que tal estaria ir por el mar y contemplar su inmensidad!</h3>
             <p></p>
         </section>
