index and aboutUs(html and css)

--- a/assets/pages/aboutUs.html
+++ b/assets/pages/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/images/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
     <title>Mindy Travel | About Us</title>
 </head>
@@ -28,19 +28,31 @@
     
     <main>
         <section class="sectionAbout">
-            <img src="../images/airport.jpg" alt="">
-            <h3>Escoge viajar en avion y disfruta del cielo!</h3>
-            <p></p>
+            <img src="../images/airport.jpg" alt="airway">
+            <div>
+                <h3>Escoge viajar en avion y disfruta del cielo!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil suscipit aperiam quo tenetur autem quibusdam voluptates, quisquam iste iure dicta, repellendus fugiat! Delectus in nisi nesciunt possimus doloribus, aliquid doloremque.
+                Nisi ab sunt dolorem quos sint repellat eligendi temporibus dignissimos? Molestiae eum perferendis, magnam vitae illum ipsum officia. Aspernatur dolore voluptatibus nesciunt sapiente at error voluptatum, magnam deserunt cum animi?
+                Necessitatibus impedit adipisci a unde rem, nihil hic iste. Voluptatum ab laudantium minima quam ullam? Quae, minus omnis? Incidunt nemo laborum ullam hic tenetur esse sapiente harum eligendi suscipit sed?</p>
+            </div> 
         </section>
         <section class="sectionAbout">
-            <img src="../images/picture.jpg" alt="">
-            <h3>o quizas prefieres en tren y deslumbrarte con las montañas y paisajes!</h3>
-            <p></p>
+            <img src="../images/picture.jpg" alt="land route">
+            <div>
+                <h3>o quizas prefieres en tren y deslumbrarte con las montañas y paisajes!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In vero delectus consequatur adipisci quasi illo! Libero doloribus soluta assumenda tempore consequatur repellendus explicabo unde! Ipsam suscipit animi placeat libero harum.
+                Modi deleniti corrupti animi reprehenderit accusantium quam ullam aut ipsa voluptate minima officia labore numquam iste, explicabo saepe deserunt quaerat. Neque commodi asperiores blanditiis placeat rerum maxime eligendi minus maiores.
+                Repudiandae ad commodi quibusdam voluptatem vero. Aspernatur error porro ratione et? Unde eos omnis aut ex cupiditate? Vero at, incidunt voluptas nesciunt earum cupiditate reiciendis ratione aperiam assumenda pariatur. Quaerat.</p>
+            </div>
         </section>
         <section class="sectionAbout">
-            <img src="../images/image.jpg" alt="">
-            <h3>y que tal estaria ir por el mar y contemplar su inmensidad!</h3>
-            <p></p>
+            <img src="../images/image.jpg" alt="seaway">
+            <div>
+                <h3>y que tal estaria ir por el mar y contemplar su inmensidad!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo autem animi laudantium enim distinctio architecto, culpa cupiditate doloremque alias sunt velit rem incidunt doloribus obcaecati minus magnam numquam possimus itaque?
+                Perferendis dignissimos accusamus explicabo illum facilis! Blanditiis labore inventore et eligendi est earum voluptatibus doloremque. Suscipit totam molestiae aliquid nemo incidunt? Sint, culpa! Blanditiis mollitia ipsum, quas debitis sequi unde.
+                Reprehenderit consectetur quam consequatur esse in, explicabo inventore nulla, harum sapiente fugit quis delectus ipsa ea, voluptatibus perferendis laborum? Dolores eveniet ipsa aspernatur natus expedita vero sint tempora blanditiis soluta?</p>
+            </div>
         </section>
     </main>
 
