--- a/assets/pages/benefitsTips.html
+++ b/assets/pages/benefitsTips.html
@@ -27,7 +27,30 @@
     </header>
     
     <main>
-       
+        <div class="benefitsTips">
+            <div>
+                <img src="../images/benefits.jpg" alt="benefits">
+                <img src="../images/tips.jpg" alt="tips">
+            </div>
+            <ol>
+                <li class="benefits">
+                    Benefits of traveling
+                    <ul>
+                        <li>Improves mood</li>
+                        <li>Reduces stress</li>
+                        <li>Traveling produces happiness</li>
+                    </ul>
+                </li>
+                <li class="tips">
+                    Tips for traveling
+                    <ul>
+                        <li>Check your documentation before traveling</li>
+                        <li>Enjoy the moment</li>
+                        <li>Check the weather forecasts</li>
+                    </ul>
+                </li>
+            </ol>
+        </div>
     </main>
 
     <footer>
@@ -46,7 +69,7 @@
             </div>
         </div>
         <p>Created by: Jesús Nicolás García Gómez</p>
-        <p class="slogan">¡Somos Mindy Travel, juntos cumplimos tus sueños!</p>
+        <p class="slogan">¡We are Mindy Travel, together we fulfill your dreams!</p>
     </footer>
 </body>
 </html>
