--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -26,8 +26,16 @@
         <h3>Contact</h3>
     </header>
     
-    <main>
-       
+    <main class="mainContact">
+       <img src="../images/woman.jpg" alt="woman">
+       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere quasi odit at dignissimos possimus sapiente? Animi ad culpa tempore, debitis ipsam perferendis hic! Voluptatem quasi minus recusandae beatae cupiditate aliquid!
+       Est ipsa obcaecati, ducimus laudantium officiis sapiente at odio fugit et magnam quidem quae vero, sequi nam provident? Ea minima mollitia tempora cupiditate, ex doloremque veritatis esse laudantium neque quibusdam.
+       Natus similique, exercitationem unde ab animi architecto quibusdam officiis harum distinctio deserunt omnis doloribus, fugit commodi, saepe culpa odit praesentium. Minima, atque. Labore maiores ad adipisci nisi, minima ullam voluptatum.
+       Voluptates autem voluptatibus ea tenetur quas ab, quod dolore laudantium nobis porro! Facere ea, officia exercitationem reprehenderit rerum accusantium quo, porro tempore pariatur autem aspernatur eaque labore iure voluptatem inventore.</p>
+       <div>
+            <a href="mailto:xxxxxx@gmail.com">Email: xxxxxx@gmail.com</a>
+            <a href="tel:+570000000000">Phone: +57 000 0000 000</a>
+       </div>
     </main>
 
     <footer>
@@ -46,7 +54,7 @@
             </div>
         </div>
         <p>Created by: Jesús Nicolás García Gómez</p>
-        <p class="slogan">¡Somos Mindy Travel, juntos cumplimos tus sueños!</p>
+        <p class="slogan">¡We are Mindy Travel, together we fulfill your dreams!</p>
     </footer>
 </body>
 </html>
