--- a/assets/pages/information.html
+++ b/assets/pages/information.html
@@ -27,7 +27,37 @@
     </header>
     
     <main>
-       
+        <table>
+            <caption>More Information</caption>
+            <colgroup>
+                <col span="1" class="topic">
+                <col span="2" class="information">
+            </colgroup>
+            <thead>
+                <tr>
+                    <th>Topic</th>
+                    <th>Schedule</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Air travel</td>
+                    <td>1:00 P.M.</td>
+                    <td>20/09</td>
+                </tr>
+                <tr>
+                    <td>Boat trips</td>
+                    <td>4:00 P.M.</td>
+                    <td>02/10</td>
+                </tr>
+                <tr>
+                    <td>Travel Savings</td>
+                    <td>9:00 A.M.</td>
+                    <td>07/10</td>
+                </tr>
+            </tbody>
+       </table>
     </main>
 
     <footer>
@@ -46,7 +76,7 @@
             </div>
         </div>
         <p>Created by: Jesús Nicolás García Gómez</p>
-        <p class="slogan">¡Somos Mindy Travel, juntos cumplimos tus sueños!</p>
+        <p class="slogan">¡We are Mindy Travel, together we fulfill your dreams!</p>
     </footer>
 </body>
 </html>
