--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <p>Created by: Jesús Nicolás García Gómez</p>
-        <p class="slogan">¡Somos Mindy Travel, juntos cumplimos tus sueños!</p>
+        <p class="slogan">¡We are Mindy Travel, together we fulfill your dreams!</p>
     </footer>
 </body>
 </html>
