--- a/assets/pages/aboutUs.html
+++ b/assets/pages/aboutUs.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <p>Created by: Jesús Nicolás García Gómez</p>
-        <p class="slogan">¡Somos Mindy Travel, juntos cumplimos tus sueños!</p>
+        <p class="slogan">¡We are Mindy Travel, together we fulfill your dreams!</p>
     </footer>
 </body>
 </html>
