--- a/assets/pages/aboutUs.html
+++ b/assets/pages/aboutUs.html
@@ -15,6 +15,7 @@
             <a href="./information.html">Information</a>
             <a href="./benefitsTips.html">Benefits and tips</a>
             <a href="./contact.html">Contact</a>
+            <a href="./raffle.html">Raffle</a>
         </div>
         <a href="../../index.html" class="logo">
             <img src="../images/logo.png" alt="Logo Mindy Travel">
@@ -26,8 +27,8 @@
         <h3>About Us</h3>
     </header>
     
-    <main>
-        <section class="sectionAbout">
+    <main class="aboutUsMain">
+        <section>
             <img src="../images/airport.jpg" alt="airway">
             <div>
                 <h3>Escoge viajar en avion y disfruta del cielo!</h3>
@@ -36,7 +37,7 @@
                 Necessitatibus impedit adipisci a unde rem, nihil hic iste. Voluptatum ab laudantium minima quam ullam? Quae, minus omnis? Incidunt nemo laborum ullam hic tenetur esse sapiente harum eligendi suscipit sed?</p>
             </div> 
         </section>
-        <section class="sectionAbout">
+        <section>
             <img src="../images/picture.jpg" alt="land route">
             <div>
                 <h3>o quizas prefieres en tren y deslumbrarte con las montañas y paisajes!</h3>
@@ -45,7 +46,7 @@
                 Repudiandae ad commodi quibusdam voluptatem vero. Aspernatur error porro ratione et? Unde eos omnis aut ex cupiditate? Vero at, incidunt voluptas nesciunt earum cupiditate reiciendis ratione aperiam assumenda pariatur. Quaerat.</p>
             </div>
         </section>
-        <section class="sectionAbout">
+        <section>
             <img src="../images/image.jpg" alt="seaway">
             <div>
                 <h3>y que tal estaria ir por el mar y contemplar su inmensidad!</h3>
