--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="./assets/pages/information.html">Information</a>
             <a href="./assets/pages/benefitsTips.html">Benefits and tips</a>
             <a href="./assets/pages/contact.html">Contact</a>
+            <a href="./assets/pages/raffle.html">Raffle</a>
         </div>
         <a href="#" class="logo">
             <img src="./assets/images/logo.png" alt="Logo Mindy Travel">
@@ -26,15 +27,15 @@
         <h3>Home</h3>
     </header>
     
-    <main>
-        <img class="imgIndex" src="./assets/images/planeSinFondo.png" alt="plane">
-        <div class="divIndex">
+    <main class="indexMain">
+        <img src="./assets/images/planeSinFondo.png" alt="plane">
+        <div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, ad ab voluptates cupiditate minus nisi suscipit pariatur recusandae perferendis doloribus cum accusantium aut harum animi itaque vero excepturi delectus. Consequuntur?
             Reiciendis incidunt aliquam ex illo recusandae, accusamus voluptate perferendis praesentium? Nobis veritatis commodi ab et corrupti atque ullam quibusdam quos quae, voluptas laborum tenetur rem maxime quidem enim sapiente libero!
             Amet aliquam cumque vel earum suscipit libero enim. Officiis hic quasi aperiam nostrum quam blanditiis dolor illo ipsam nulla temporibus dicta vitae eaque nisi maxime, error minima, quibusdam consequuntur consectetur!
             Mollitia minus, doloribus omnis laborum, illo odit perspiciatis aperiam possimus, qui harum libero eveniet error quod! Rerum quas officia sed deleniti, vel, debitis voluptatibus impedit ea quidem eligendi, natus accusamus!
             Facere inventore molestias velit eveniet mollitia! Similique voluptatum aut, vel nesciunt officiis maxime recusandae. Non atque iure consequuntur sapiente aliquid aperiam. Voluptatem culpa rerum rem fugit ratione officiis quaerat mollitia!</p>
-            <img src="./assets/images/window.jpg" alt="window">
+            <img src="./assets/images/window.jpg" alt="window" id="imgWindow">
         </div>
     </main>
 
