--- a/assets/pages/benefitsTips.html
+++ b/assets/pages/benefitsTips.html
@@ -15,6 +15,7 @@
             <a href="./information.html">Information</a>
             <a href="#" id="here">Benefits and tips</a>
             <a href="./contact.html">Contact</a>
+            <a href="./raffle.html">Raffle</a>
         </div>
         <a href="../../index.html" class="logo">
             <img src="../images/logo.png" alt="Logo Mindy Travel">
@@ -26,14 +27,11 @@
         <h3>Benefits and Tips</h3>
     </header>
     
-    <main>
-        <div class="benefitsTips">
-            <div>
-                <img src="../images/benefits.jpg" alt="benefits">
-                <img src="../images/tips.jpg" alt="tips">
-            </div>
+    <main class="benefitsTipsMain">
+        <div>
+            <img src="../images/benefits.jpg" alt="benefits">
             <ol>
-                <li class="benefits">
+                <li>
                     Benefits of traveling
                     <ul>
                         <li>Improves mood</li>
@@ -41,7 +39,12 @@
                         <li>Traveling produces happiness</li>
                     </ul>
                 </li>
-                <li class="tips">
+            </ol>
+        </div>
+        <div>
+            <img src="../images/tips.jpg" alt="tips">
+            <ol start="2">
+                <li>
                     Tips for traveling
                     <ul>
                         <li>Check your documentation before traveling</li>
