--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -15,6 +15,7 @@
             <a href="./information.html">Information</a>
             <a href="./benefitsTips.html">Benefits and tips</a>
             <a href="#" id="here">Contact</a>
+            <a href="./raffle.html">Raffle</a>
         </div>
         <a href="../../index.html" class="logo">
             <img src="../images/logo.png" alt="Logo Mindy Travel">
