--- a/assets/pages/information.html
+++ b/assets/pages/information.html
@@ -15,6 +15,7 @@
             <a href="#" id="here">Information</a>
             <a href="./benefitsTips.html">Benefits and tips</a>
             <a href="./contact.html">Contact</a>
+            <a href="./raffle.html">Raffle</a>
         </div>
         <a href="../../index.html" class="logo">
             <img src="../images/logo.png" alt="Logo Mindy Travel">
@@ -26,7 +27,7 @@
         <h3>Information</h3>
     </header>
     
-    <main>
+    <main class="informationMain">
         <table>
             <caption>More Information</caption>
             <colgroup>
