--- a/assets/pages/raffle.html
+++ b/assets/pages/raffle.html
@@ -30,11 +30,7 @@
     <main class="raffleMain">
         <section>
             <h4>To participate you must be from Toronto, Canada</h4>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d369104.4
-            789495363!2d-79.7076803195351!3d43.71826391417826!2m3!1f0!2f0!3f0!3m2!1i1024!
-            2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%2
-            0Ontario%2C%20Canad%C3%A1!5e0!3m2!1ses!2sco!4v1687374043704!5m2!1ses!2sco" 
-            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d369104.4789495363!2d-79.7076803195351!3d43.71826391417826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20Ontario%2C%20Canad%C3%A1!5e0!3m2!1ses!2sco!4v1687374043704!5m2!1ses!2sco" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <form action="./show_data.html" method="get">
             <label for="firstName">First Name</label>
